Fix layout overlap between topbar and content

--- a/src/app/layouts/inner-layout/inner-layout.component.styl
+++ b/src/app/layouts/inner-layout/inner-layout.component.styl
@@ -1,6 +1,6 @@
 mat-sidenav-container
 	position absolute
-	top 60px
+	top 64px
 	bottom 0
 	left 0
 	right 0
